program/test/files/Error/expr/deadCode.cps
function hola(): string {
    return "";
    let a = 5;
}